--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
-    width: 85%;
+    width: 70%;
+    object-fit: cover;
 }
 
 #bgVideo {
@@ -59,7 +60,7 @@ body {
     padding: 1rem;
     text-align: center;
     color: rgb(255, 255, 255);
-    font-size: 1em;
+    font-size: 1.3rem;
     margin: 0;
     background-color: rgba(24, 22, 22, .9);
 
@@ -68,7 +69,7 @@ body {
 .follow-text {
     color: #fff;
     position: absolute;
-    bottom: 20%;
+    bottom: 15%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
