--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 
 #quoteText {
     line-height: 1.5;
-    padding: 1.5rem;
+    padding: 0 2rem 0 1.5rem;
     text-align: center;
     color: rgb(255, 255, 255);
     font-size: 1.5rem;
@@ -68,7 +68,7 @@ body {
 .follow-text {
     color: #fff;
     position: absolute;
-    bottom: 15%;
+    bottom: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
